--- a/templates/home_view.html
+++ b/templates/home_view.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello Bangladesh</h1>
-</body>
-</html>
+{%  extends "base.html" %}
+
+{% block content %}
+<h2>Single Artical View</h2>
+<h1>Artical Title =  {{ artical_obj.title  }} </h1>
+<p>Content =  {{ artical_obj.content }} </p>
+{% endblock content %}
+}
