--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
 <div class="jumbotron text-center">
   <h1>My First Bootstrap Page</h1>
   <p>Resize this responsive page to see the effect!</p> 
+  <hr>
+  <h1>Articals : <a href="{% url 'artical_index' %}"> Articals </a></h1>
 </div>
   
 <div class="container">
