--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
+  <h1>Login <a href="{% url 'accounts_login' %}" target="_blank">Login</a> </h1>
   <p>Resize this responsive page to see the effect!</p> 
   <hr>
   <h1>Articals : <a href="{% url 'artical_index' %}"> Articals </a></h1>
