--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,11 +3,11 @@
 {% block content %}
 <h1> User Login Form</h1>
 <div style="margin-top:10px;padding:40px;">
-    <form>
+    <form method="post">
         {% csrf_token %}
         <input type="text" name="username" placeholder="Username" />
         <br> <br>
-        <input type="password" placeholder="Password" />
+        <input type="password" name="password" placeholder="Password" />
         <br> <br>
         <input type="submit" value="Login">
     </form>
