--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1> User Login Form</h1>
 <div style="margin-top:10px;padding:40px;">
-    <form method="post">
+    <form method="post" action="{% url 'accounts_login' %}">
         {% csrf_token %}
         <input type="text" name="username" placeholder="Username" />
         <br> <br>
